More work on, "Welcome" message, as well as send the latest archived message to subscribers subscribed in the list control panel

--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -540,10 +540,11 @@ Invalid Email Addresses
 
 </fieldset> 
 
-
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if not_subscribed --> 
+
+
 
 	 <div class="buttonfloat">
 	  <input type="button" class="cautionary" value="<< Re-Enter Email List" onclick="history.back();return false;" />
@@ -564,6 +565,38 @@ Invalid Email Addresses
 	 </div>
 	 <div class="floatclear"></div>
 
+
+
+
+<!-- tmpl_if list_type_isa_list --> 
+	<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN -->
+
+	<!-- tmpl_else --> 
+
+		<!-- tmpl_if list_settings.send_subscribed_by_list_owner_message --> 
+			<ul> 
+				<li>
+				 <p class="positive">
+					Addresses <strong>Subscribed</strong> will be sent a, "Welcome" message. 
+				</p> 
+			</ul> 
+		<!-- /tmpl_if --> 
+
+		<!-- tmpl_if list_settings.send_last_archived_msg_mass_mailing --> 
+		<ul> 
+			<li>
+			 <p class="positive">
+					Addresses <strong>Subscribed</strong> will be sent the latest archived message.				
+			</p> 
+		</ul>		
+		<!-- /tmpl_if --> 
+
+
+	<!-- /tmpl_if --> 
+
+<!-- /tmpl_if -->
+
+	
 <!-- tmpl_else --> 
 	<p class="alert"> 
 		No addresses have passed verification. 
