Changed the name of the option. Again.

--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -462,7 +462,7 @@
 			<td>
 				<p>
 					<label for="enable_mass_subscribe">
-						Allow Subscriptions in the List Control Panel
+						Enable Adding Subscribers from the List Control Panel
 					</label><br /> 
 					 When enabled, this will allow you to add subscribers, via the List Control Panel without any email confirmation. 
 					</p> 
@@ -486,7 +486,7 @@
 						<td>
 							<p>
 								<label for="send_subscribed_by_list_owner_message">
-									Send a "Welcome" Message to Addresses Subscribed by the List Owner. 
+									Send a "Welcome" Message to Addresses Subscribed in the List Control Panel.  
 								</label><br /> 
 							
 							</p>
@@ -504,7 +504,7 @@
 						<td>
 							<p>
 								<label for="send_last_archived_msg_mass_mailing">
-									Send the Newest Archived Message to Addresses Subscribed by the List Owner. 
+									Send the Newest Archived Message to Addresses Subscribed in the List Control Panel
 								</label><br /> 
 							
 							</p>
