--- a/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
@@ -71,7 +71,7 @@
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
  <input type="hidden" name="process" value="delete" />
  <input type="hidden" name="address" value="<!-- tmpl_var email escape="HTML" -->" />
- <input type="hidden" name="f"       value="checker" />
+ <input type="hidden" name="f"       value="remove_subscribers" />
  <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
  <div class="buttonfloat">
   <input type="submit" value="Unsubscribe Address From This List" class="alertive" />
