--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -372,9 +372,45 @@
 	</p>
 </fieldset> 
 
+</fieldset>
 
+
+
+
+<fieldset>
+	<legend>
+		
+		Unsubscribed by List Owner Message
+	</legend>
+
+	<fieldset>
+		<legend>
+			Headers: 
+		</legend>
+  
+    <p>
+     <label for="unsubscribed_by_list_owner_message_subject" class="label_by_5">Subject:</label> <input type="text" name="unsubscribed_by_list_owner_message_subject" id="unsubscribed_by_list_owner_message_subject" value="<!-- tmpl_var list_settings.unsubscribed_by_list_owner_message_subject escape=HTML -->" class="midi" />
+    </p>
+    
+	
+	
+	</fieldset>
+
+	<fieldset>
+		<legend>
+			PlainText Message: 
+		</legend>
+	
+	<p>
+<textarea name="unsubscribed_by_list_owner_message" id="unsubscribed_by_list_owner_message" rows="10" cols="50" ><!-- tmpl_var list_settings.unsubscribed_by_list_owner_message escape=HTML -->
+</textarea> 
+	</p>
+</fieldset> 
 
 </fieldset>
+
+
+
 
 
 
