--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -803,6 +803,34 @@ If someone not currently subscribed to your mailing list attempts to unsubscribe
 
 </fieldset>
 
+<fieldset>
+<legend>
+	List Control Panel Unsubscriptions
+</legend>
+
+		<table cellpadding="5" border="0"> 
+			<tr> 
+				<td>
+					<p>
+						<input type="checkbox" name="send_unsubscribed_by_list_owner_message" id="send_unsubscribed_by_list_owner_message" <!-- tmpl_if list_settings.send_unsubscribed_by_list_owner_message -->checked="checked"<!-- /tmpl_if --> value="1" /> 	
+					</p>
+				</td>
+				<td>
+					<p>
+						<label for="send_unsubscribed_by_list_owner_message">
+							Send a "Farewell" Message to Addresses Unsubscribed in the List Control Panel.  
+						</label><br /> 
+					
+					</p>
+					
+						
+				</td>
+			</tr>
+</table>
+
+</fieldset>
+
+
 
 <fieldset> 
 	<legend>Misc.</legend>
