--- a/dada/DADA/Template/templates/search_email_results_screen.tmpl
+++ b/dada/DADA/Template/templates/search_email_results_screen.tmpl
@@ -18,11 +18,7 @@
 		
 	<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
 	
-	 <input type="hidden" name="f" value="checker" />
-
-	<!-- tmpl_if adding_to_blacklist --> 
-		<input type="hidden" name="add_to_black_list" value="1" /> 
-	<!--/tmpl_if --> 
+	 <input type="hidden" name="f" value="remove_subscribers" />
 	
 		<p> 
 		 <!-- tmpl_var results --> 
