--- a/dada/DADA/Template/templates/search_list_screen.tmpl
+++ b/dada/DADA/Template/templates/search_list_screen.tmpl
@@ -53,9 +53,9 @@
    uncheck all
   </a>
  </p>
- <input type=hidden name="process" value="delete" />
- <input type=hidden name="f"       value="checker" />
- <input type=hidden name="type" value="<!-- tmpl_var type -->" />
+ <input type="hidden" name="process" value="delete" />
+ <input type="hidden" name="f"       value="remove_subscribers" />
+ <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
  <div class="buttonfloat">
   <input type="submit" class="processing" value="Unsubscribe Checked Emails" />
  </div>
