--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -186,7 +186,7 @@
 	<!-- tmpl_unless list_type_isa_sub_request_list -->
 
 		 <input type=hidden name="process" value="delete" />
-		 <input type=hidden name="f"       value="checker" />
+		 <input type=hidden name="f"       value="remove_subscribers" />
 		 <input type=hidden name="type" value="<!-- tmpl_var type -->" />
 		 <div class="buttonfloat">
 		  <input type="submit" class="alertive" value="Unsubscribe Checked '<!-- tmpl_var type_title -->' Subscribers" />
