--- a/dada/DADA/Template/templates/sending_monitor_container_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_container_screen.tmpl
@@ -6,8 +6,10 @@
     //<![CDATA[
 	Event.observe(window, 'load', function() {
 	  update_sending_monitor();	
-		<!-- tmpl_if list_settings.tracker_show_message_reports_in_mailing_monitor --> 
-			refresh_tracker();
+		<!-- tmpl_if list_type_isa_list --> 
+			<!-- tmpl_if list_settings.tracker_show_message_reports_in_mailing_monitor --> 
+				refresh_tracker();
+			<!-- /tmpl_if --> 
 		<!-- /tmpl_if --> 
 	});
 	
@@ -44,18 +46,19 @@
 
 <div id="sending_monitor_ajax"></div> 
 
-<!-- tmpl_if list_settings.tracker_show_message_reports_in_mailing_monitor --> 
+<!-- tmpl_if list_type_isa_list --> 
+	<!-- tmpl_if list_settings.tracker_show_message_reports_in_mailing_monitor --> 
 
-	<fieldset> 
-	<legend>Tracker Reports</legend>
-		<div style="padding:10px; margin: 10px; border:0px">
-		<iframe id="tracker_plugin" src="<!-- tmpl_var tracker_url -->?chrome=0;f=m;mid=<!-- tmpl_var message_id -->"  width="100%" height="640"></iframe> 
-	</div> 
+		<fieldset> 
+		<legend>Tracker Reports</legend>
+			<div style="padding:10px; margin: 10px; border:0px">
+			<iframe id="tracker_plugin" src="<!-- tmpl_var tracker_url -->?chrome=0;f=m;mid=<!-- tmpl_var message_id -->"  width="100%" height="640"></iframe> 
+		</div> 
 
-	</fieldset>
+		</fieldset>
 
+	<!-- /tmpl_if --> 
 <!-- /tmpl_if --> 
-
 
 
 
