--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -332,9 +332,14 @@
 
 <fieldset>
 	<legend>
-		
-		Subscribed by List Owner Message
+		&quot;Welcome&quot; Message to Addresses Subscribed in the List Control Panel. 
 	</legend>
+
+	<!-- tmpl_unless list_settings.send_subscribed_by_list_owner_message --> 
+		<p class="error"> 
+			Sending a, &quot;Welcome&quot; message has been disabled in the Mailing List Options.
+		</p> 
+	<!-- /tmpl_unless --> 
 
 	<fieldset>
 		<legend>
@@ -380,8 +385,18 @@
 <fieldset>
 	<legend>
 		
-		Unsubscribed by List Owner Message
+		&quot;Farewell&quot; Message to Addresses Unsubscribed in the List Control Pane
 	</legend>
+
+
+	<!-- tmpl_unless list_settings.send_unsubscribed_by_list_owner_message --> 
+		<p class="error"> 
+			Sending a, &quot;Farewell&quot; message has been disabled in the Mailing List Options.
+		</p> 
+	<!-- /tmpl_unless -->
+	
+
+
 
 	<fieldset>
 		<legend>
@@ -423,55 +438,6 @@
 
 
 
-
-
-<fieldset>
-	<legend>
-		Not Allowed to Post Message
-	</legend>
-
-    <p>
-    <label for="not_allowed_to_post_message_subject" class="label_by_5">Subject:</label> <input type="text" name="not_allowed_to_post_message_subject" id="not_allowed_to_post_message_subject" value="<!-- tmpl_var list_settings.not_allowed_to_post_message_subject escape=HTML -->" class="midi" />
-    </p>
-    
-    <p><label for="not_allowed_to_post_message">PlainText Message:</label>
-    
-<p>
-	This message is sent out if you use the Dada Bridge Plugin that allows you to send mailing list emails by sending an email to a special address. People who are not allowed to post to the list will receive this message. 
-</p>
-<p>
-<textarea name="not_allowed_to_post_message" id="not_allowed_to_post_message" rows="10" cols="50" ><!-- tmpl_var list_settings.not_allowed_to_post_message escape=HTML -->
-</textarea> 
-</p>
-</fieldset>
-<fieldset>
-	<legend>
-		You Are Already Subscribed Message: 
-	</legend>
-	<p>
-		This message is sent out only if someone that's already currently subscribed to a list tries to subscribe again and you've set the preferences to send an email out, instead of giving this message in the web browser. 
-<!-- tmpl_if list_settings.email_your_subscribed_msg  -->
-	<p class="positive">
-		Enabled. 
-	</p>
-<!--tmpl_else-->
-	<p class="error">
-		"You are Subscribed" messages are currently shown in the browser and this email message is not sent.  
-	</p>
-<!--/tmpl_if-->
-	</p>
-
-    <p>
-    <label for="you_are_already_subscribed_message_subject" class="label_by_5">Subject:</label> <input type="text" name="you_are_already_subscribed_message_subject" id="you_are_already_subscribed_message_subject" value="<!-- tmpl_var list_settings.you_are_already_subscribed_message_subject escape=HTML -->" class="midi" />
-    </p>
-    
-    <p><label for="you_are_already_subscribed_message">PlainText Message:</label>
-    
-	<p>
-<textarea name="you_are_already_subscribed_message" id="you_are_already_subscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.you_are_already_subscribed_message escape=HTML -->
-</textarea> 
-	</p>
-</fieldset>
 
 
 
@@ -550,6 +516,70 @@
 </fieldset> 
 
 </fieldset>
+
+
+
+
+
+<fieldset>
+	<legend>
+		You Are Already Subscribed Message: 
+	</legend>
+	<p>
+		This message is sent out only if someone that's already currently subscribed to a list tries to subscribe again and you've set the preferences to send an email out, instead of giving this message in the web browser. 
+<!-- tmpl_if list_settings.email_your_subscribed_msg  -->
+	<p class="positive">
+		Enabled. 
+	</p>
+<!--tmpl_else-->
+	<p class="error">
+		"You are Subscribed" messages are currently shown in the browser and this email message is not sent.  
+	</p>
+<!--/tmpl_if-->
+	</p>
+
+    <p>
+    <label for="you_are_already_subscribed_message_subject" class="label_by_5">Subject:</label> <input type="text" name="you_are_already_subscribed_message_subject" id="you_are_already_subscribed_message_subject" value="<!-- tmpl_var list_settings.you_are_already_subscribed_message_subject escape=HTML -->" class="midi" />
+    </p>
+    
+    <p><label for="you_are_already_subscribed_message">PlainText Message:</label>
+    
+	<p>
+<textarea name="you_are_already_subscribed_message" id="you_are_already_subscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.you_are_already_subscribed_message escape=HTML -->
+</textarea> 
+	</p>
+</fieldset>
+
+
+
+
+
+<fieldset>
+	<legend>
+		Not Allowed to Post Message
+	</legend>
+
+    <p>
+    <label for="not_allowed_to_post_message_subject" class="label_by_5">Subject:</label> <input type="text" name="not_allowed_to_post_message_subject" id="not_allowed_to_post_message_subject" value="<!-- tmpl_var list_settings.not_allowed_to_post_message_subject escape=HTML -->" class="midi" />
+    </p>
+    
+    <p><label for="not_allowed_to_post_message">PlainText Message:</label>
+    
+<p>
+	This message is sent out if you use the Dada Bridge Plugin that allows you to send mailing list emails by sending an email to a special address. People who are not allowed to post to the list will receive this message. 
+</p>
+<p>
+<textarea name="not_allowed_to_post_message" id="not_allowed_to_post_message" rows="10" cols="50" ><!-- tmpl_var list_settings.not_allowed_to_post_message escape=HTML -->
+</textarea> 
+</p>
+</fieldset>
+
+
+
+
+
+
+
 
 <fieldset>
 	<legend>
