--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -332,7 +332,7 @@
 
 <fieldset>
 	<legend>
-		&quot;Welcome&quot; Message to Addresses Subscribed in the List Control Panel. 
+		&quot;Welcome&quot; Message to Addresses Subscribed in the List Control Panel 
 	</legend>
 
 	<!-- tmpl_unless list_settings.send_subscribed_by_list_owner_message --> 
@@ -385,7 +385,7 @@
 <fieldset>
 	<legend>
 		
-		&quot;Farewell&quot; Message to Addresses Unsubscribed in the List Control Pane
+		&quot;Farewell&quot; Message to Addresses Unsubscribed in the List Control Panel
 	</legend>
 
 
