--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -498,7 +498,7 @@ People will still be able to subscribe/unsubscribe
 <fieldset>
 
 <legend>
-Unsubscribe Tag Options (Experimental)
+Unsubscribe Tag Options
 </legend>
 <p class="positive">
 	The Unsubscribe Tag (<code>&lt;!-- tmpl_var list_unsubscribe_link --&gt;</code>)
@@ -792,7 +792,7 @@ Unsubscription Confirmations
 			<td>
 				<p>
 					<label for="enable_mass_subscribe">
-						Enable Adding Subscribers from the List Control Panel
+						Enable Adding Subscribers from within the List Control Panel
 					</label><br /> 
 					 When enabled, this will allow you to add subscribers, via the List Control Panel without any email confirmation. 
 					</p> 
