Moved CAPTCHA docs out of Config.pm and into its own doc.

--- a/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
@@ -215,7 +215,7 @@ Email Address Protection
    <label for="archive_protect_email_recaptcha_mailhide">
     reCAPTCHA MailHide
    </label>
-   <a href="http://mailhide.recaptcha.net/" target="_blank">
+   <a href="http://www.google.com/recaptcha/mailhide/" target="_blank">
     (More Info)
    </a> <!-- tmpl_unless can_use_recaptcha_mailhide -->
 	      <span class="error">Disabled. Make sure have to configure reCAPTCHA MailHide in the Dada::Config.pm file and the Perl CPAN module Captcha::reCAPTCHA::Mailhide is installed..</span>
