--- a/dada/DADA/Template/templates/admin_screen.tmpl
+++ b/dada/DADA/Template/templates/admin_screen.tmpl
@@ -77,7 +77,7 @@
          Root Password to create a new list.
         </p>
         
-        <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
+        <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
          <input type="hidden" name="f" value="new_list" />
          <table align="center">
           <tr>
