--- a/dada/DADA/Template/templates/back_link_screen.tmpl
+++ b/dada/DADA/Template/templates/back_link_screen.tmpl
@@ -15,7 +15,7 @@
  blank to remove the link.
 </p>
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 
 <input type="hidden" name="process" value="1" />
