--- a/dada/DADA/Template/templates/change_password_screen.tmpl
+++ b/dada/DADA/Template/templates/change_password_screen.tmpl
@@ -10,7 +10,7 @@
  be required to log back into your Mailing List control panel, using your new Mailing  List Password.
 </p>
 
-<form name="default_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+<form name="default_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 
 
 <fieldset> 
