--- a/dada/DADA/Template/templates/delete_email_screen_filtered.tmpl
+++ b/dada/DADA/Template/templates/delete_email_screen_filtered.tmpl
@@ -14,7 +14,7 @@ Remove
 </p>
 
 
-<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <input type="hidden" name="process" value="delete" />
  <input type="hidden" name="f"       value="remove_subscribers" />
  <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
