--- a/dada/DADA/Template/templates/delete_list_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_list_screen.tmpl
@@ -7,7 +7,7 @@
 
 <fieldset> 
 	
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	
 <p class="error">
  Are you <em>sure</em> you want to totally delete this list?
