--- a/dada/DADA/Template/templates/edit_archived_msg_prefs_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_archived_msg_prefs_screen.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_set name="title" value="Edit Archived Message Preferences" -->
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	 <input type="hidden" name="f" value="edit_archived_msg" /> 
 	
 	<!-- tmpl_if done --> 
