--- a/dada/DADA/Template/templates/edit_html_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_html_type_screen.tmpl
@@ -25,7 +25,7 @@
 <!-- /tmpl_if -->
 
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 
 
