--- a/dada/DADA/Template/templates/edit_template_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_template_screen.tmpl
@@ -27,7 +27,7 @@
 	<p class="alert">Old Style template tag support has been disabled.</p>
 <!-- /tmpl_if --> 
 
-<form name="the_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+<form name="the_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 <fieldset> 
 	<legend>Your Mailing List Template</legend> 
