--- a/dada/DADA/Template/templates/error_already_sent_sub_confirmation_screen.tmpl
+++ b/dada/DADA/Template/templates/error_already_sent_sub_confirmation_screen.tmpl
@@ -56,7 +56,7 @@ address: </p>
  You may resend this confirmation by clicking the button below:
 </p>
 
-<form action="<!-- tmpl_var PROGRAM_URL -->" method="POST"> 
+<form action="<!-- tmpl_var PROGRAM_URL -->" method="POST" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 <input type="hidden" name="f" value="resend_conf" />
 
 <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" />
