--- a/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
+++ b/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
@@ -39,7 +39,7 @@
 
 
 <div style="text-align:center">
-	<form>
+	<form accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 		<input type="hidden" name="f" value="setup_info" /> 
 		<input type="submit" value="Click Here For More Information..." class="cautionary" /> 
 	</form>
