--- a/dada/DADA/Template/templates/error_invalid_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_invalid_password_screen.tmpl
@@ -46,7 +46,7 @@
 		     </label>
 		    </p>
 		
-	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
      <input type="hidden" name="flavor" value="login" />
      <input type="hidden" name="admin_list" value="<!-- tmpl_var list_settings.list -->" />
 	 <input type="hidden" name="referer" value="<!-- tmpl_var ENV_SCRIPT_URI -->" /><!-- DEV: perhaps even switch this out with js? --> 
@@ -70,7 +70,7 @@
  Resetting the Mailing List Password for this Mailing List will require email confirmation by the List Owner. 
 </p>
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
  <input type="hidden" name="flavor" value="email_password" />
  <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" />
  <p align="center">
