--- a/dada/DADA/Template/templates/error_invalid_root_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_invalid_root_password_screen.tmpl
@@ -17,7 +17,7 @@ your <!-- tmpl_var PROGRAM_NAME --> script.
 	 Please try again:
 	</p> 
 
-	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 	<p><strong>Root Password</strong><br /> 
 	 <input type="hidden" name="flavor" value="new_list" />
 	 <input type="password" name="root_password" maxlength="24" /> 
