--- a/dada/DADA/Template/templates/error_no_list_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_list_password_screen.tmpl
@@ -12,7 +12,7 @@
  Please refer to the error logs for more information.
 </p>
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
  <input type="hidden" name="flavor" value="email_password" />
  <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" />
  <p style="text-align:center">
