--- a/dada/DADA/Template/templates/feature_set_screen.tmpl
+++ b/dada/DADA/Template/templates/feature_set_screen.tmpl
@@ -4,7 +4,7 @@
 
 <!-- tmpl_include help_link_widget.tmpl -->
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">  
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">  
   
 <!-- tmpl_if done --> 
 
