--- a/dada/DADA/Template/templates/help_link_widget.tmpl
+++ b/dada/DADA/Template/templates/help_link_widget.tmpl
@@ -4,7 +4,7 @@
 
 
 	<div class="buttonfloat">
-		<form action="<!-- tmpl_var HELP_LINKS_URL -->/<!-- tmpl_var screen -->.html" target="_blank"> 
+		<form action="<!-- tmpl_var HELP_LINKS_URL -->/<!-- tmpl_var screen -->.html" target="_blank" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 			<input class="help" type="submit" value="[?] <!-- tmpl_var title escape="HTML" -->" /> 
 		</form>
 	</div>
