--- a/dada/DADA/Template/templates/list_invite_screen.tmpl
+++ b/dada/DADA/Template/templates/list_invite_screen.tmpl
@@ -6,7 +6,7 @@
 
 <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
 
-<form name="send_email" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
+<form name="send_email" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 
 
