--- a/dada/DADA/Template/templates/list_popup_login_form.tmpl
+++ b/dada/DADA/Template/templates/list_popup_login_form.tmpl
@@ -1,6 +1,6 @@
 <!-- begin list_popup_login_form.tmpl -->
 
-<form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
+<form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <input type="hidden" name="f"       value="login" />
  <input type="hidden" name="process" value="true" />
 
