--- a/dada/DADA/Template/templates/list_search_form_widget.tmpl
+++ b/dada/DADA/Template/templates/list_search_form_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin list_search_form_widget.tmpl --> 
 
-    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get">
+    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
      <p>
       <label for="keyword">
        Search <!-- tmpl_var type_title --> Subscribers
