--- a/dada/DADA/Template/templates/manage_script_screen.tmpl
+++ b/dada/DADA/Template/templates/manage_script_screen.tmpl
@@ -131,7 +131,7 @@
 <p>I really appreciate all the support received! Thanks!</p> 
 
 
-	<form method="get" action="http://dadamailproject.com/purchase/pro.html" target="_blank">
+	<form method="get" action="http://dadamailproject.com/purchase/pro.html" target="_blank" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 		<input type="hidden" name="ref" value="ms_scrn" /> 
 		<p style="text-align:center">
 		<input type="submit" value="Purchase Pro Dada!" class="processing" />  
@@ -171,7 +171,7 @@
  Join the Dada Mail Project Announcements Mailing List
 </h1>
 
-<form action="http://dadamailproject.com/cgi-bin/dada/mail.cgi" method="get" target="_blank">
+<form action="http://dadamailproject.com/cgi-bin/dada/mail.cgi" method="get" target="_blank" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <input type="hidden" name="f"      value="subscribe" />
  <input type="hidden" name="list"   value="dada_announce" />
  <input type="text"   name="email"  value="<!-- tmpl_var name="list_owner_email" -->" size="24" maxlength="1024" />
