--- a/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
@@ -13,7 +13,7 @@
 
 
 
-<form name="default_form" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
+<form name="default_form" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 
 
