--- a/dada/DADA/Template/templates/pass_gen_screen.tmpl
+++ b/dada/DADA/Template/templates/pass_gen_screen.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_set name="title" value="Password Encryption" -->
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
  <p> 
   <label for="pw">  
    Enter
