--- a/dada/DADA/Template/templates/profile_update_email_confirm.tmpl
+++ b/dada/DADA/Template/templates/profile_update_email_confirm.tmpl
@@ -132,7 +132,7 @@
 	
 <!-- /tmpl_if --> 
 
-<form action="<!-- tmpl_var PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	<input type="hidden" name="confirmed" value="1" /> 
 	<input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" /> 
 	<input type="hidden" name="email" value="<!-- tmpl_var profile.email -->" /> 
