--- a/dada/DADA/Template/templates/restore_lists_screen.tmpl
+++ b/dada/DADA/Template/templates/restore_lists_screen.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_set name="title" value="Restore List Information" --> 
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	
 <p>
  Please enter the correct <!-- tmpl_var PROGRAM_NAME --> Root Password to begin restoring list settings:<br /> 
