--- a/dada/DADA/Template/templates/search_list_screen.tmpl
+++ b/dada/DADA/Template/templates/search_list_screen.tmpl
@@ -12,7 +12,7 @@
 
 
 <!-- tmpl_if subscribers --> 
- <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+ <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 
 
