--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -52,7 +52,7 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
 
 
 
-<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <input type="hidden" name="f"       value="add_email" />
  <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
  
