--- a/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
@@ -8,7 +8,7 @@
 	<!-- tmpl_var GOOD_JOB_MESSAGE -->
 <!--/tmpl_if-->
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 
 
