--- a/dada/DADA/Template/templates/archive_search_form.tmpl
+++ b/dada/DADA/Template/templates/archive_search_form.tmpl
@@ -1,6 +1,6 @@
 <!-- begin archive_search_form.tmpl -->
 
-<form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post">
+<form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <p>
   <label for="keyword">
    Search 
