--- a/dada/DADA/Template/templates/confirm_captcha_step_screen.tmpl
+++ b/dada/DADA/Template/templates/confirm_captcha_step_screen.tmpl
@@ -16,7 +16,7 @@
  As the final step, please type in the string of letters that you see in the below image into the text box:
 </p>
 
-<form action="<!-- tmpl_var PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 
 
 
