--- a/dada/DADA/Template/templates/congrats_screen.tmpl
+++ b/dada/DADA/Template/templates/congrats_screen.tmpl
@@ -3,7 +3,7 @@
 <!-- tmpl_set name="title" value="Welcome to <!-- tmpl_var PROGRAM_NAME -->" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
  
-<form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post">
+<form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  
 <!-- tmpl_unless ROOT_PASS_IS_ENCRYPTED -->
 	 
@@ -92,7 +92,7 @@
 
 <h2>Program Configuration</h2>
 
-<form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post">
+<form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 
 If you would like to see more information about your current Program Configuration, enter your <!-- tmpl_var PROGRAM_NAME --> Root Password, below:
