--- a/dada/DADA/Template/templates/edit_archived_msg.tmpl
+++ b/dada/DADA/Template/templates/edit_archived_msg.tmpl
@@ -5,7 +5,7 @@
 	<!-- tmpl_var GOOD_JOB_MESSAGE --> 
 <!-- /tmpl_if --> 
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" enctype="multipart/form-data" method="post">
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" enctype="multipart/form-data" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 <input type="hidden" name="f" value="edit_archived_msg" />
 
 
