--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -8,7 +8,7 @@
 	<!-- tmpl_var GOOD_JOB_MESSAGE -->
 <!--/tmpl_if -->
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 
 <fieldset> 
