--- a/dada/DADA/Template/templates/list_login_form.tmpl
+++ b/dada/DADA/Template/templates/list_login_form.tmpl
@@ -4,7 +4,7 @@
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 
-<form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
+<form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <input type="hidden" name="f"       value="login" />
  <input type="hidden" name="process" value="true" />
 
