--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -10,7 +10,7 @@
 
 <div style="width:100%"><!-- what's this all about? --> 
 
-	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 	
 <fieldset>
 
