--- a/dada/DADA/Template/templates/profile_fields.tmpl
+++ b/dada/DADA/Template/templates/profile_fields.tmpl
@@ -219,7 +219,7 @@ Profiles
 
 	             <td style="width:12em"> 
 
-	            <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" style="margin: 0pt; display: inline;">
+	            <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" style="margin: 0pt; display: inline;" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 	             <input type="hidden" name="f" value="profile_fields" /> 
 	             <input type="hidden" name="edit_field" value="1" /> 
 	             <input type="hidden" name="field"  value="<!-- tmpl_var field -->" /> 
@@ -228,7 +228,7 @@ Profiles
 	
 	
 				<!-- tmpl_if can_move_columns --> 
-					<form style="margin: 0pt; display: inline;">			
+					<form style="margin: 0pt; display: inline;" accept-charset="<!-- tmpl_var HTML_CHARSET -->">			
 						<input type="hidden" name="f" value="profile_fields" /> 
 		             	<input type="hidden" name="process" value="edit_field_order" /> 
 		             	<input type="hidden" name="field"  value="<!-- tmpl_var field -->" />
@@ -236,7 +236,7 @@ Profiles
 						<input type="submit" value="^" class="cautionary" style="margin: 0pt;" title="move this field up" <!-- tmpl_if __first__ -->disabled="disabled"<!-- /tmpl_if --> />
 				
 					</form>
-					<form style="margin: 0pt; display: inline;">
+					<form style="margin: 0pt; display: inline;" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 					
 						<input type="hidden" name="f" value="profile_fields" /> 
 		             	<input type="hidden" name="process" value="edit_field_order" /> 
@@ -280,7 +280,7 @@ Profiles
              
              <td style="width:5em"> 
             
-            <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+            <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
              <input type="hidden" name="f" value="profile_fields" /> 
              <input type="hidden" name="process" value="delete_field" /> 
              <input type="hidden" name="field"  value="<!-- tmpl_var field -->" /> 
@@ -330,7 +330,7 @@ Profiles
 
     
     <!-- tmpl_if root_login --> 
-         <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+         <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
              <input type="hidden" name="f" value="profile_fields" /> 
 
 			<!-- tmpl_unless edit_field --> 
