--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -91,7 +91,7 @@
 
 <fieldset> 
 	
-<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" > 
+<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	
 	<input type="hidden" name="f" value="profile_login" /> 
 	<input type="hidden" name="process" value="1" /> 
@@ -159,7 +159,7 @@
 <fieldset> 
 
 
-<form action="<!-- tmpl_var PROGRAM_URL -->" method="post"> 
+<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	<input type="hidden" name="f" value="profile_register" /> 
 	<p>
 		<label for="register_email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">Email Address:</label><input type="text" name="email" id="register_email" value="<!-- tmpl_var email -->" /> 
@@ -208,7 +208,7 @@
 
 <fieldset> 
 
-<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" > 
+<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	<input type="hidden" name="f" value='profile_reset_password' /> 
 	<p>
 		<label for="reset_email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
