--- a/dada/DADA/Template/templates/profile_reset_password.tmpl
+++ b/dada/DADA/Template/templates/profile_reset_password.tmpl
@@ -6,7 +6,7 @@
 	<fieldset>
 		<legend>Pick a New Password:</legend> 
 	
-	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" > 
+	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 		<input type="hidden" name="f"     value="profile_reset_password"  /> 
 		<input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
 		<input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" />
