"CAPTCHA'ing" is not a word and I'm feeling less cute these days.

--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -421,7 +421,7 @@ People will still be able to subscribe/unsubscribe
 	    
 	    <p class="error">
 	     <em>
-	      Disabled. You need to successfully configure your current CAPTCHA'ing system (<!-- tmpl_var CAPTCHA_TYPE -->)
+	      Disabled. You need to successfully configure your current CAPTCHA system (<!-- tmpl_var CAPTCHA_TYPE -->)
 	    </em>
 	    </p>
 	    
