--- a/dada/DADA/Template/templates/archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_options_screen.tmpl
@@ -142,7 +142,7 @@
 	    
 	    <p class="error">
 	     <em>
-	      Disabled. You need to successfully configure your current CAPTCHA'ing system (<!-- tmpl_var CAPTCHA_TYPE -->)
+	      Disabled. You need to successfully configure your current CAPTCHA system (<!-- tmpl_var CAPTCHA_TYPE -->)
 	     </em>
 	    </p>
 	    
