Closes #213 "Setup Info" screen broken w/error: "attempt to set parameter 'config_vals' with a scalar"

--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -99,7 +99,7 @@
 <div style="width:95%;height:300px;overflow:auto;border:1px solid black;padding:5px;margin:5px">
 
 <table border="0" cellpadding="5"> 
-	<!-- tmpl_loop CONFIG_vals --> 
+	<!-- tmpl_loop config_vals --> 
 	<tr> 
 		<td width="150px"><p><!-- tmpl_var name --></p></td> 
 		<td><p><pre><!-- tmpl_var value escape="HTML" --></pre></p></td> 
