--- a/dada/DADA/Template/templates/subscription_form_widget.tmpl
+++ b/dada/DADA/Template/templates/subscription_form_widget.tmpl
@@ -15,7 +15,7 @@
 
 <fieldset>
 <legend>
- Subscribe/Unsubscribe <!-- tmpl_if single_list --> on <!-- tmpl_var list_settings.list_name --><!-- tmpl_else --> a List<!-- /tmpl_if single_list -->
+ Subscribe/Unsubscribe <!-- tmpl_if single_list --> on <!-- tmpl_var list_settings.list_name --><!-- tmpl_else --> a List<!-- /tmpl_if -->
 </legend>
 
 <!-- tmpl_if single_list --> 
